pufferlib/ocean/airsim2/airsim2.h

#define LOG_BUFFER_SIZE 1024
LogBuffer *allocate_logbuffer(int size);
void free_logbuffer(LogBuffer *buffer);
Log aggregate_and_clear(LogBuffer *logs);
typedef struct Aircraft
{
    float x, y, z;
    float vx, vy, vz;
} Aircraft;
typedef struct Seeker
{
    int type;           
    float fov;          
    float track_rate;   
    float acceleration; 
    float max_velocity;
    float lifetime;            
    float navigation_constant; 
    float x, y, z;
    float vx, vy, vz;
    float current_heading; 
    bool active;           
    float elapsed_time; 
} Seeker;
typedef struct Laser
{
    int type;                 
    float fov;                
    float track_rate;         
    float guidance_reduction; 
    float maximum_range;      
    int engaging_seeker; 
    float az;            
    float el;            
} Laser;
typedef struct SimConfig
{
    float dt;       
    float max_time; 
    int max_steps;  
    float aircraft_x;
    float aircraft_y;
    float aircraft_z;
    float aircraft_vx;
    float aircraft_vy;
    float aircraft_vz;
    struct
    {
        float fov;
        float track_rate;
        float acceleration;
        float max_velocity;
        float lifetime;
        float navigation_constant;
    } seeker_types[11];
    struct
    {
        float track_rate;
        float fov;
        float guidance_reduction;
        float maximum_range;
    } laser_types[11];
    int seekers[MAX_SEEKERS]; 
    int lasers[MAX_LASERS];   
} SimConfig;
typedef struct AirSim
{
    float time;
    int ticks;
    bool terminal;
    Aircraft aircraft;
    Seeker seekers[MAX_SEEKERS];
    Laser lasers[MAX_LASERS];
    float dt;
    float max_time;
    int max_steps;
    float *observations;
    int *actions; 
    float *rewards;
    unsigned char *terminals;
    LogBuffer *log_buffer;
    Log log;
    SimConfig config;
} AirSim;
SimConfig *load_config(const char *filename)
{
    FILE *file = fopen(filename, "rb");
    if (!file)
    {
        fprintf(stderr, "Failed to open config file: %s\n", filename);
        return NULL;
    }
    yaml_parser_t parser;
    yaml_document_t document;
    SimConfig *config = NULL;
    if (!yaml_parser_initialize(&parser))
    {
        fclose(file);
        return NULL;
    }
    yaml_parser_set_input_file(&parser, file);
    if (!yaml_parser_load(&parser, &document))
    {
        yaml_parser_delete(&parser);
        fclose(file);
        return NULL;
    }
    config = (SimConfig *)calloc(1, sizeof(SimConfig));
    if (!config)
    {
        yaml_document_delete(&document);
        yaml_parser_delete(&parser);
        fclose(file);
        return NULL;
    }
    yaml_node_t *root = yaml_document_get_root_node(&document);
    if (!root)
        goto cleanup;
    yaml_node_t *sim_node = get_yaml_node(&document, root, "simulation");
    if (sim_node)
    {
        config->dt = get_yaml_float(&document, sim_node, "dt", 0.001f);
        config->max_time = get_yaml_float(&document, sim_node, "max_time", 60.0f);
        config->max_steps = get_yaml_int(&document, sim_node, "max_steps", 60000);
        printf("Loaded simulation settings:\n");
        printf("  dt: %.3f\n", config->dt);
        printf("  max_time: %.1f\n", config->max_time);
        printf("  max_steps: %d\n", config->max_steps);
        yaml_node_t *ac_node = get_yaml_node(&document, sim_node, "aircraft");
        if (ac_node)
        {
            yaml_node_t *pos_node = get_yaml_node(&document, ac_node, "position");
            if (pos_node && pos_node->type == YAML_SEQUENCE_NODE &&
                pos_node->data.sequence.items.top - pos_node->data.sequence.items.start >= 3)
            {
                config->aircraft_x = atof((char *)yaml_document_get_node(&document, pos_node->data.sequence.items.start[0])->data.scalar.value);
                config->aircraft_y = atof((char *)yaml_document_get_node(&document, pos_node->data.sequence.items.start[1])->data.scalar.value);
                config->aircraft_z = atof((char *)yaml_document_get_node(&document, pos_node->data.sequence.items.start[2])->data.scalar.value);
            }
            yaml_node_t *vel_node = get_yaml_node(&document, ac_node, "velocity");
            if (vel_node && vel_node->type == YAML_SEQUENCE_NODE &&
                vel_node->data.sequence.items.top - vel_node->data.sequence.items.start >= 3)
            {
                config->aircraft_vx = atof((char *)yaml_document_get_node(&document, vel_node->data.sequence.items.start[0])->data.scalar.value);
                config->aircraft_vy = atof((char *)yaml_document_get_node(&document, vel_node->data.sequence.items.start[1])->data.scalar.value);
                config->aircraft_vz = atof((char *)yaml_document_get_node(&document, vel_node->data.sequence.items.start[2])->data.scalar.value);
            }
        }
    }
    printf("Loading config from %s\n", filename);
    yaml_node_t *seeker_types = get_yaml_node(&document, root, "seeker_types");
    if (seeker_types)
    {
        printf("Found seeker_types section\n");
        for (int i = 0; i < seeker_types->data.mapping.pairs.top - seeker_types->data.mapping.pairs.start; i++)
        {
            yaml_node_pair_t *pair = seeker_types->data.mapping.pairs.start + i;
            yaml_node_t *key_node = yaml_document_get_node(&document, pair->key);
            yaml_node_t *value_node = yaml_document_get_node(&document, pair->value);
            int type_idx = atoi((char *)key_node->data.scalar.value);
            printf("Loading seeker type %d\n", type_idx);
            if (type_idx > 0 && type_idx < 11)
            {
                config->seeker_types[type_idx].fov = get_yaml_float(&document, value_node, "fov", 30.0f);
                config->seeker_types[type_idx].track_rate = get_yaml_float(&document, value_node, "track_rate", 100.0f);
                config->seeker_types[type_idx].acceleration = get_yaml_float(&document, value_node, "acceleration", 400.0f);
                config->seeker_types[type_idx].max_velocity = get_yaml_float(&document, value_node, "max_velocity", 1000.0f);
                config->seeker_types[type_idx].lifetime = get_yaml_float(&document, value_node, "lifetime", 17.0f);
                config->seeker_types[type_idx].navigation_constant = get_yaml_float(&document, value_node, "navigation_constant", 3.0f);
            }
        }
    }
    yaml_node_t *laser_types = get_yaml_node(&document, root, "laser_types");
    if (laser_types)
    {
        printf("Found laser_types section\n");
        for (int i = 0; i < laser_types->data.mapping.pairs.top - laser_types->data.mapping.pairs.start; i++)
        {
            yaml_node_pair_t *pair = laser_types->data.mapping.pairs.start + i;
            yaml_node_t *key_node = yaml_document_get_node(&document, pair->key);
            yaml_node_t *value_node = yaml_document_get_node(&document, pair->value);
            int type_idx = atoi((char *)key_node->data.scalar.value);
            printf("Loading laser type %d\n", type_idx);
            if (type_idx > 0 && type_idx < 11)
            {
                config->laser_types[type_idx].track_rate = get_yaml_float(&document, value_node, "track_rate", 60.0f);
                config->laser_types[type_idx].fov = get_yaml_float(&document, value_node, "fov", 5.0f);
                config->laser_types[type_idx].guidance_reduction = get_yaml_float(&document, value_node, "guidance_reduction", 5.0f);
                config->laser_types[type_idx].maximum_range = get_yaml_float(&document, value_node, "maximum_range", 4000.0f);
            }
        }
    }
    yaml_node_t *entities = get_yaml_node(&document, root, "entities");
    if (entities)
    {
        printf("Found entities section\n");
        yaml_node_t *seekers = get_yaml_node(&document, entities, "seekers");
        if (seekers && seekers->type == YAML_SEQUENCE_NODE)
        {
            printf("Loading seekers array\n");
            for (int i = 0; i < seekers->data.sequence.items.top - seekers->data.sequence.items.start && i < MAX_SEEKERS; i++)
            {
                yaml_node_t *seeker = yaml_document_get_node(&document, seekers->data.sequence.items.start[i]);
                config->seekers[i] = get_yaml_int(&document, seeker, "type", 0);
                printf("Loaded seeker %d: type=%d\n", i, config->seekers[i]);
            }
        }
        yaml_node_t *lasers = get_yaml_node(&document, entities, "lasers");
        if (lasers && lasers->type == YAML_SEQUENCE_NODE)
        {
            printf("Loading lasers array\n");
            for (int i = 0; i < lasers->data.sequence.items.top - lasers->data.sequence.items.start && i < MAX_LASERS; i++)
            {
                yaml_node_t *laser = yaml_document_get_node(&document, lasers->data.sequence.items.start[i]);
                config->lasers[i] = get_yaml_int(&document, laser, "type", 0);
                printf("Loaded laser %d: type=%d\n", i, config->lasers[i]);
            }
        }
    }
cleanup:
    yaml_document_delete(&document);
    yaml_parser_delete(&parser);
    fclose(file);
    return config;
}
void apply_config(AirSim *sim, SimConfig *config)
{
    sim->dt = config->dt;
    sim->max_time = config->max_time;
    sim->max_steps = config->max_steps;
    sim->aircraft.x = config->aircraft_x;
    sim->aircraft.y = config->aircraft_y;
    sim->aircraft.z = config->aircraft_z;
    sim->aircraft.vx = config->aircraft_vx;
    sim->aircraft.vy = config->aircraft_vy;
    sim->aircraft.vz = config->aircraft_vz;
    for (int i = 0; i < MAX_SEEKERS; i++)
    {
        int t = config->seekers[i];
        if (t > 0)
        {
            sim->seekers[i].type = t;
            sim->seekers[i].fov = config->seeker_types[t].fov;
            sim->seekers[i].track_rate = config->seeker_types[t].track_rate;
            sim->seekers[i].acceleration = config->seeker_types[t].acceleration;
            sim->seekers[i].max_velocity = config->seeker_types[t].max_velocity;
            sim->seekers[i].lifetime = config->seeker_types[t].lifetime;
            sim->seekers[i].navigation_constant = config->seeker_types[t].navigation_constant;
            sim->seekers[i].active = true;
            sim->seekers[i].elapsed_time = 0.0f;
            float angle = ((float)i - (MAX_SEEKERS / 2)) * 5.0f * DEG2RAD;
            float distance = 1000.0f;
            sim->seekers[i].x = sim->aircraft.x + distance * cosf(angle);
            sim->seekers[i].y = sim->aircraft.y + distance * sinf(angle);
            sim->seekers[i].z = sim->aircraft.z - 200.0f;
            float dx = sim->aircraft.x - sim->seekers[i].x;
            float dy = sim->aircraft.y - sim->seekers[i].y;
            float dz = sim->aircraft.z - sim->seekers[i].z;
            float norm = sqrtf(dx * dx + dy * dy + dz * dz);
            sim->seekers[i].vx = (dx / norm) * (sim->seekers[i].max_velocity * 0.5f);
            sim->seekers[i].vy = (dy / norm) * (sim->seekers[i].max_velocity * 0.5f);
            sim->seekers[i].vz = (dz / norm) * (sim->seekers[i].max_velocity * 0.5f);
        }
        else
        {
            sim->seekers[i].active = false;
        }
    }
    for (int i = 0; i < MAX_LASERS; i++)
    {
        int t = config->lasers[i];
        if (t > 0)
        {
            sim->lasers[i].type = t;
            sim->lasers[i].track_rate = config->laser_types[t].track_rate;
            sim->lasers[i].fov = config->laser_types[t].fov;
            sim->lasers[i].guidance_reduction = config->laser_types[t].guidance_reduction;
            sim->lasers[i].maximum_range = config->laser_types[t].maximum_range;
            sim->lasers[i].engaging_seeker = -1;
            sim->lasers[i].az = 0.0f;
            sim->lasers[i].el = 0.0f;
        }
        else
        {
            sim->lasers[i].type = 0;
            sim->lasers[i].engaging_seeker = -1;
        }
    }
}
void step(AirSim *sim)
{
    process_actions(sim);
    step_aircraft(sim);
    step_seekers(sim);
    step_lasers(sim);
    compute_reward(sim);
    sim->terminals[0] = check_terminal(sim);
    update_observations(sim);
    sim->time += sim->dt;
    sim->ticks += 1;
    Log current_log = {sim->rewards[0], (float)sim->ticks};
    add_log(sim->log_buffer, &current_log);
}
void reset(AirSim *sim)
{
#ifdef DEBUG_PRINT
    printf("\n=== Resetting Simulation ===\n");
    printf("Config has:\n");
    for (int i = 0; i < MAX_SEEKERS; i++)
    {
        printf("Seeker %d type: %d\n", i, sim->config.seekers[i]);
    }
#endif
    sim->time = 0.0f;
    sim->ticks = 0;
    sim->terminal = false;
    sim->aircraft.x = sim->config.aircraft_x;
    sim->aircraft.y = sim->config.aircraft_y;
    sim->aircraft.z = sim->config.aircraft_z;
    sim->aircraft.vx = sim->config.aircraft_vx;
    sim->aircraft.vy = sim->config.aircraft_vy;
    sim->aircraft.vz = sim->config.aircraft_vz;
    for (int i = 0; i < MAX_SEEKERS; i++)
    {
        int t = sim->config.seekers[i];
        if (t > 0)
        {
            sim->seekers[i].type = t;
            sim->seekers[i].fov = sim->config.seeker_types[t].fov;
            sim->seekers[i].track_rate = sim->config.seeker_types[t].track_rate;
            sim->seekers[i].acceleration = sim->config.seeker_types[t].acceleration;
            sim->seekers[i].max_velocity = sim->config.seeker_types[t].max_velocity;
            sim->seekers[i].lifetime = sim->config.seeker_types[t].lifetime;
            sim->seekers[i].navigation_constant = sim->config.seeker_types[t].navigation_constant;
            sim->seekers[i].active = true;
            sim->seekers[i].elapsed_time = 0.0f;
            float angle = ((float)i - (MAX_SEEKERS / 2)) * 10.0f * DEG2RAD;
            float distance = 1000.0f;
            sim->seekers[i].x = sim->aircraft.x + distance * cosf(angle);
            sim->seekers[i].y = sim->aircraft.y + distance * sinf(angle);
            sim->seekers[i].z = sim->aircraft.z - 200.0f;
            float dx = sim->aircraft.x - sim->seekers[i].x;
            float dy = sim->aircraft.y - sim->seekers[i].y;
            float dz = sim->aircraft.z - sim->seekers[i].z;
            float norm = sqrtf(dx * dx + dy * dy + dz * dz);
            sim->seekers[i].vx = (dx / norm) * (sim->seekers[i].max_velocity * 0.5f);
            sim->seekers[i].vy = (dy / norm) * (sim->seekers[i].max_velocity * 0.5f);
            sim->seekers[i].vz = (dz / norm) * (sim->seekers[i].max_velocity * 0.5f);
#ifdef DEBUG_PRINT
            printf("  Position=(%.1f, %.1f, %.1f)\n",
                   sim->seekers[i].x, sim->seekers[i].y, sim->seekers[i].z);
            printf("  Velocity=(%.1f, %.1f, %.1f)\n",
                   sim->seekers[i].vx, sim->seekers[i].vy, sim->seekers[i].vz);
#endif
        }
        else
        {
            sim->seekers[i].active = false;
        }
    }
    for (int i = 0; i < MAX_LASERS; i++)
    {
        int t = sim->config.lasers[i];
        if (t > 0)
        {
            sim->lasers[i].type = t;
            sim->lasers[i].track_rate = sim->config.laser_types[t].track_rate;
            sim->lasers[i].fov = sim->config.laser_types[t].fov;
            sim->lasers[i].guidance_reduction = sim->config.laser_types[t].guidance_reduction;
            sim->lasers[i].maximum_range = sim->config.laser_types[t].maximum_range;
            sim->lasers[i].engaging_seeker = -1;
            sim->lasers[i].az = 0.0f;
            sim->lasers[i].el = 0.0f;
        }
        else
        {
            sim->lasers[i].type = 0;
            sim->lasers[i].engaging_seeker = -1;
        }
    }
    update_observations(sim);
    sim->rewards[0] = 0.0f;
    sim->terminals[0] = 0;
    sim->log_buffer->idx = 0;
}
void reset_aircraft_pos(AirSim *sim, float x, float y, float z)
{
    sim->aircraft.x = x;
    sim->aircraft.y = y;
    sim->aircraft.z = z;
    update_observations(sim);
}
void reset_aircraft_vel(AirSim *sim, float vx, float vy, float vz)
{
    sim->aircraft.vx = vx;
    sim->aircraft.vy = vy;
    sim->aircraft.vz = vz;
    update_observations(sim);
}
void reset_seeker(AirSim *sim, int idx, int type, float x, float y, float z, float vx, float vy, float vz)
{
    if (idx < 0 || idx >= MAX_SEEKERS)
        return;
    Seeker *s = &sim->seekers[idx];
    if (type > 0)
    {
        s->type = type;
        s->fov = sim->config.seeker_types[type].fov;
        s->track_rate = sim->config.seeker_types[type].track_rate;
        s->acceleration = sim->config.seeker_types[type].acceleration;
        s->max_velocity = sim->config.seeker_types[type].max_velocity;
        s->lifetime = sim->config.seeker_types[type].lifetime;
        s->navigation_constant = sim->config.seeker_types[type].navigation_constant;
        s->active = true;
        s->elapsed_time = 0.0f;
    }
    else
    {
        s->active = false;
    }
    s->x = x;
    s->y = y;
    s->z = z;
    s->vx = vx;
    s->vy = vy;
    s->vz = vz;
    update_observations(sim);
}
void reset_laser(AirSim *sim, int idx, int type, float az, float el)
{
    if (idx < 0 || idx >= MAX_LASERS)
        return;
    Laser *l = &sim->lasers[idx];
    if (type > 0)
    {
        l->type = type;
        l->track_rate = sim->config.laser_types[type].track_rate;
        l->fov = sim->config.laser_types[type].fov;
        l->guidance_reduction = sim->config.laser_types[type].guidance_reduction;
        l->maximum_range = sim->config.laser_types[type].maximum_range;
    }
    else
    {
        l->type = 0;
    }
    l->engaging_seeker = -1;
    l->az = az;
    l->el = el;
    update_observations(sim);
}
void apply_seeker_type_config(AirSim *sim, int type, float fov, float track_rate, float acceleration,
                              float max_velocity, float lifetime, float nav_const)
{
    if (type <= 0 || type >= 11)
        return;
    sim->config.seeker_types[type].fov = fov;
    sim->config.seeker_types[type].track_rate = track_rate;
    sim->config.seeker_types[type].acceleration = acceleration;
    sim->config.seeker_types[type].max_velocity = max_velocity;
    sim->config.seeker_types[type].lifetime = lifetime;
    sim->config.seeker_types[type].navigation_constant = nav_const;
    for (int i = 0; i < MAX_SEEKERS; i++)
    {
        if (sim->seekers[i].active && sim->seekers[i].type == type)
        {
            sim->seekers[i].fov = fov;
            sim->seekers[i].track_rate = track_rate;
            sim->seekers[i].acceleration = acceleration;
            sim->seekers[i].max_velocity = max_velocity;
            sim->seekers[i].lifetime = lifetime;
            sim->seekers[i].navigation_constant = nav_const;
        }
    }
}
void apply_laser_type_config(AirSim *sim, int type, float track_rate, float fov,
                             float guidance_reduction, float maximum_range)
{
    if (type <= 0 || type >= 11)
        return;
    sim->config.laser_types[type].track_rate = track_rate;
    sim->config.laser_types[type].fov = fov;
    sim->config.laser_types[type].guidance_reduction = guidance_reduction;
    sim->config.laser_types[type].maximum_range = maximum_range;
    for (int i = 0; i < MAX_LASERS; i++)
    {
        if (sim->lasers[i].type == type)
        {
            sim->lasers[i].track_rate = track_rate;
            sim->lasers[i].fov = fov;
            sim->lasers[i].guidance_reduction = guidance_reduction;
            sim->lasers[i].maximum_range = maximum_range;
        }
    }
}
void allocate(AirSim *sim)
{
    int obs_size = 6 + MAX_SEEKERS * 16 + MAX_LASERS * 13;
    sim->observations = (float *)calloc(obs_size, sizeof(float));
    sim->actions = (int *)calloc(MAX_LASERS, sizeof(int));
    sim->rewards = (float *)calloc(1, sizeof(float));
    sim->terminals = (unsigned char *)calloc(1, sizeof(unsigned char));
    sim->log_buffer = allocate_logbuffer(LOG_BUFFER_SIZE);
    sim->time = 0.0f;
    sim->ticks = 0;
    sim->terminal = false;
}
void free_allocated(AirSim *sim)
{
    if (sim)
    {
        if (sim->observations)
            free(sim->observations);
        if (sim->actions)
            free(sim->actions);
        if (sim->rewards)
            free(sim->rewards);
        if (sim->terminals)
            free(sim->terminals);
        if (sim->log_buffer)
            free_logbuffer(sim->log_buffer);
    }
}
void init(AirSim *sim)
{
    reset(sim);
}